--- a/style.css
+++ b/style.css
@@ -515,7 +515,7 @@ html{
   font-weight: 600;
 }
 .arr-col .price button{
-  background: red;
+  background:blue;
   padding: 0.8rem 2.8rem;
   color: black;
   border-radius: 0.5rem;
@@ -837,7 +837,7 @@ html{
 }
 .arrivals.show .col-1 .searchBox{
   width: 100%;
-  height: 40px;
+  height: 80px;
   position: relative;
   margin-bottom: 1rem;
 }
